# gamer-ai

./: .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  analytics.py  batch_run.sh  build_centerline.py  constants.py  debug_straight.py  grid_search.py  instructions.py  main.py  obs_spec.py  output.md  param_explorer.py  policies.py  pyproject.toml  redo_analytics.py  setup_and_run.ps1  steering.py  track.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
clients/: __init__.py  instruction_client.py  rl_client.py
config/: grid_search_template.yaml  reward_config.yaml  training_params.yaml
distributed/: coordinator.py  protocol.py  worker.py
docs/: README_ASSETTO.md  README_TORCS.md
framework/: alphazero.py  analytics.py  base_env.py  base_reward.py  bc.py  bc_io.py  belief.py  cmaes.py  cnn_policy.py  dqn.py  game_adapter.py  info_gain.py  live_monitor.py  lstm.py  obs_memory.py  policies.py  ppo.py  reinforce.py  replay.py  run_config.py  self_play.py  training.py  version.py
graphify-out/: GRAPH_REPORT.md  cost.json  manifest.json
infrastructure/: README.md
plans/: issue-209-sc2-replace-track-progress-chart.md  issue-live-gui-plan.txt
rl/: env.py  main.py  reward.py  train.py
runs/: debug_straight.txt  example_run.txt
scripts/: launch_assetto.ps1  launch_assetto.sh  show_replay_maps.py
tests/: README.md  conftest.py  helpers.py  test_analytics_no_matplotlib.py  test_analytics_task_metrics.py  test_atari_adapter.py  test_atari_analytics.py  test_atari_env.py  test_belief.py  (+74 more)
(+202 files in other folders)
